updated swagger docs for auth
